[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Kludex/fastapi-docker-debug"

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.9.4"
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.34.3" }

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
flake8 = "^7.2.0"
autoflake = "^2.3.1"
isort = "^6.0.1"
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
